[gd_scene load_steps=7 format=2]

[ext_resource path="res://RobotoSlab-VariableFont_wght1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/DebugButtons.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 27
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 1 )

[node name="DebugButtons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = -307.059
margin_right = 161.0
margin_bottom = -246.059
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Star"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = -234.0
margin_right = 161.0
margin_bottom = -175.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "Planet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 36.9438
margin_top = -162.607
margin_right = 163.944
margin_bottom = -109.607
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "System"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 38.2599
margin_top = -96.1012
margin_right = 163.26
margin_bottom = -37.1012
mouse_filter = 1
custom_fonts/font = SubResource( 4 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="StarButton" to="." method="_on_StarButton_button_up"]
[connection signal="button_up" from="PlanetButton" to="." method="_on_PlanetButton_button_up"]
[connection signal="button_up" from="SystemButton" to="." method="_on_SystemButton_button_up"]
[connection signal="button_up" from="ClearButton" to="." method="_on_ClearButton_button_up"]
